--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     .card-body h3{font-size:1rem;font-weight:700;margin-bottom:8px}
     .card-body h3 a{color:var(--text);text-decoration:none}
     .card-body h3 a:hover{color:var(--accent)}
-    .card-desc{color:var(--text-muted);font-size:.85rem;flex:1;margin-bottom:14px;line-height:1.5}
+    .card-desc{color:var(--text-muted);font-size:.85rem;flex:1;margin-bottom:14px;line-height:1.5;display:-webkit-box;-webkit-line-clamp:3;-webkit-box-orient:vertical;overflow:hidden}
     .card-tags{display:flex;flex-wrap:wrap;gap:6px;margin-bottom:14px}
     .card-footer{display:flex;align-items:center;justify-content:space-between;padding-top:12px;border-top:1px solid var(--border)}
-    .btn-github{display:inline-flex;align-items:center;gap:6px;color:var(--accent);text-decoration:none;font-size:.82rem;font-weight:500;padding:5px 12px;border:1px solid var(--border);border-radius:6px;transition:border-color .2s,background .2s}
+    .btn-github{display:inline-flex;align-items:center;gap:6px;color:var(--accent);text-decoration:none;font-size:.82rem;font-weight:500;padding:5px 12px;border:1px solid var(--border);border-radius:6px;transition:border-color .2s,background .2s;line-height:1.4;box-sizing:border-box}
     .btn-github:hover{border-color:var(--accent);background:rgba(88,166,255,.08)}
     .no-results{text-align:center;color:var(--text-muted);padding:60px 0;display:none;grid-column:1/-1}
     .stats-bar{display:flex;justify-content:center;flex-wrap:wrap;gap:32px;padding:32px 24px;text-align:center}
@@ -88,7 +88,7 @@
     .modal-section ul{padding-left:18px}
     .modal-section li{margin-bottom:5px}
     .modal-links{display:flex;flex-wrap:wrap;gap:10px;margin-top:20px;padding-top:16px;border-top:1px solid var(--border)}
-    .btn-details{display:inline-flex;align-items:center;gap:5px;color:var(--accent4);text-decoration:none;font-size:.82rem;font-weight:500;padding:5px 12px;border:1px solid rgba(210,168,255,.3);border-radius:6px;transition:border-color .2s,background .2s;cursor:pointer;background:none;white-space:nowrap}
+    .btn-details{display:inline-flex;align-items:center;gap:5px;color:var(--accent4);text-decoration:none;font-size:.82rem;font-weight:500;padding:5px 12px;border:1px solid rgba(210,168,255,.3);border-radius:6px;transition:border-color .2s,background .2s;cursor:pointer;background:none;white-space:nowrap;line-height:1.4;box-sizing:border-box}
     .btn-details:hover{border-color:var(--accent4);background:rgba(210,168,255,.08)}
   </style>
 </head>
