--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="projects-grid" id="projects-grid">
       <div class="no-results" id="no-results">Aucun projet trouv&#233;.</div>
 
-      <div class="project-card" data-pid="eazyskills-app" data-domains="dev cloud iac cicd" data-tags="fastapi python chatgpt openai sqlite aws lambda amplify github-actions terraform ansible edtech ia">
+      <div class="project-card" data-pid="eazyskills-app" data-domains="dev cloud iac cicd" data-tags="fastapi python chatgpt openai sqlite aws lambda amplify github-actions terraform ansible edtech ia github-projects">
         <div class="card-cover-placeholder" style="background:linear-gradient(135deg,#0a2e1a,#1a4e3a);">🎓</div>
         <div class="card-body">
           <span class="card-domain domain-dev">Dev · Cloud AWS · CI/CD · IaC</span>
@@ -202,6 +202,7 @@
             <span class="tag tag-purple">Terraform Cloud</span>
             <span class="tag tag-purple">Ansible</span>
             <span class="tag tag-red">SQLite</span>
+            <span class="tag tag-green">GitHub Projects &amp; Issues</span>
           </div>
           <div class="card-footer">
             <a class="btn-github" href="https://github.com/AnselmeG300/eazyskills-app" target="_blank"><svg width="14" height="14" viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/></svg> Repo</a>
@@ -210,7 +211,7 @@
         </div>
       </div>
 
-      <div class="project-card" data-pid="wellmum" data-domains="cloud iac cicd" data-tags="terraform aws github-actions nestjs fastapi nextjs ecs fargate rds efs">
+      <div class="project-card" data-pid="wellmum" data-domains="cloud iac cicd" data-tags="terraform aws github-actions nestjs fastapi nextjs ecs fargate rds efs github-projects">
         <img class="card-cover" src="https://raw.githubusercontent.com/AnselmeG300/wellmum/main/architecture%20applicative%20wellmum.drawio.png" alt="Wellmum Architecture" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" /><div class="card-cover-placeholder" style="display:none; background:linear-gradient(135deg,#0a1628,#1a2a4a);">☁️</div>
         <div class="card-body">
           <span class="card-domain domain-cloud">Cloud AWS · IaC · CI/CD</span>
@@ -226,6 +227,7 @@
 <span class="tag tag-red">NestJS</span>
 <span class="tag tag-red">FastAPI</span>
 <span class="tag tag-red">Next.js</span>
+<span class="tag tag-green">GitHub Projects &amp; Issues</span>
 </div>
           <div class="card-footer">
             <a class="btn-github" href="https://github.com/AnselmeG300/wellmum" target="_blank"><svg width="14" height="14" viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/></svg> Repo</a>
@@ -313,7 +315,7 @@
         </div>
       </div>
 
-      <div class="project-card" data-pid="notifications-bancaires" data-domains="cloud dev" data-tags="aws lambda dynamodb api-gateway ses eventbridge terraform github-actions django revolut serverless fintech">
+      <div class="project-card" data-pid="notifications-bancaires" data-domains="cloud dev" data-tags="aws lambda dynamodb api-gateway ses eventbridge terraform github-actions django revolut serverless fintech github-projects">
         <img class="card-cover" src="https://raw.githubusercontent.com/AnselmeG300/notification-transactions-aws-sdk/main/Architecture%20App.png" alt="EAZYCard Architecture" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" /><div class="card-cover-placeholder" style="display:none; background:linear-gradient(135deg,#1a1a0a,#2a2a1a);">💳</div>
         <div class="card-body">
           <span class="card-domain domain-cloud">FinTech · Serverless</span>
@@ -327,6 +329,7 @@
 <span class="tag tag-orange">EventBridge</span>
 <span class="tag tag-purple">Terraform</span>
 <span class="tag tag-green">GitHub Actions</span>
+<span class="tag tag-green">GitHub Projects &amp; Issues</span>
 </div>
           <div class="card-footer">
             <a class="btn-github" href="https://github.com/AnselmeG300/notification-transactions-aws-sdk" target="_blank"><svg width="14" height="14" viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/></svg> Repo</a>
@@ -417,7 +420,7 @@
 
       
 
-      <div class="project-card" data-pid="deploy-semaphore" data-domains="cloud iac containers" data-tags="aws ecs fargate terraform semaphore ansible mysql github-actions platform-engineering">
+      <div class="project-card" data-pid="deploy-semaphore" data-domains="cloud iac containers" data-tags="aws ecs fargate terraform semaphore ansible mysql github-actions platform-engineering github-projects">
         <img class="card-cover" src="https://raw.githubusercontent.com/AnselmeG300/deploy-semaphore-ecs/main/architecture/Deploy%20ECS.drawio.png" alt="Ansible Semaphore ECS Architecture" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" /><div class="card-cover-placeholder" style="display:none; background:linear-gradient(135deg,#0a2818,#1a3828);">⚙️</div>
         <div class="card-body">
           <span class="card-domain domain-cloud">DevOps · Platform Engineering</span>
@@ -430,6 +433,7 @@
 <span class="tag tag-orange">ALB</span>
 <span class="tag tag-blue">Docker</span>
 <span class="tag tag-red">MySQL</span>
+<span class="tag tag-green">GitHub Projects &amp; Issues</span>
 </div>
           <div class="card-footer">
             <a class="btn-github" href="https://github.com/AnselmeG300/deploy-semaphore-ecs" target="_blank"><svg width="14" height="14" viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/></svg> Repo</a>
