--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     .avatar{width:100px;height:100px;border-radius:50%;border:3px solid var(--accent);margin:0 auto 16px;background:var(--surface2);display:flex;align-items:center;justify-content:center;font-size:40px;overflow:hidden}
     header h1{font-size:2rem;font-weight:700;background:linear-gradient(90deg,var(--accent),var(--accent4));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
     header .tagline{color:var(--text-muted);font-size:1.05rem;margin-top:6px}
+    header .bio{color:var(--text-muted);font-size:.93rem;line-height:1.75;max-width:820px;margin:16px auto 0;text-align:left;padding:0 8px}
     .social-links{display:flex;justify-content:center;gap:16px;margin-top:20px;flex-wrap:wrap}
     .social-links a{color:var(--accent);text-decoration:none;border:1px solid var(--border);padding:6px 16px;border-radius:20px;font-size:.85rem;transition:background .2s}
     .social-links a:hover{background:var(--surface2)}
@@ -110,6 +111,7 @@
 <nav>
   <a href="#skills">Comp&#233;tences</a>
   <a href="#projects">Projets</a>
+  <a href="#mission">Mission</a>
   <a href="#contact">Contact</a>
 </nav>
 <div class="container">
@@ -742,6 +744,28 @@
         </div>
       </div>
 
+    </div>
+  </div>
+</section>
+<hr class="section-divider" />
+<section id="mission">
+  <div class="container">
+    <h2><span>&#127919;</span> Mission</h2>
+    <div class="skills-grid" style="grid-template-columns:1fr;">
+      <div class="skill-card" style="max-width:860px;margin:0 auto;">
+        <p style="color:var(--text);font-size:1rem;line-height:1.85;margin:0 0 18px;">
+          J&rsquo;ai plus de sept ann&eacute;es d&rsquo;exp&eacute;rience en ing&eacute;nierie des logiciels, pr&eacute;cis&eacute;ment dans le d&eacute;veloppement avec mod&eacute;lisation des donn&eacute;es. En plus, depuis plus de 4&nbsp;ans j&rsquo;int&egrave;gre les environnements cloud et la culture DevSecOps dans mon cycle de livraison de produit logiciel pour favoriser la CI/CD.
+        </p>
+        <p style="color:var(--text);font-size:1rem;line-height:1.85;margin:0 0 18px;">
+          Je suis ing&eacute;nieur logiciel form&eacute;, pratiquant et sp&eacute;cialis&eacute; dans le d&eacute;veloppement d&rsquo;applications web, allant de l&rsquo;analyse des besoins jusqu&rsquo;&agrave; la livraison et la maintenance. Dans ce processus, la mise en pratique de SCRUM, du DevSecOps et la formation continue sont des atouts qui me permettent de g&eacute;rer efficacement un projet logiciel et de livrer un produit de qualit&eacute;.
+        </p>
+        <p style="color:var(--text);font-size:1rem;line-height:1.85;margin:0 0 18px;">
+          Au-del&agrave; des aspects purement techniques, je suis passionn&eacute; par la transmission et la formation&nbsp;: de mes premi&egrave;res exp&eacute;riences de coaching &agrave; l&rsquo;universit&eacute; (j&rsquo;organisais d&eacute;j&agrave; des s&eacute;ances de remise &agrave; niveau pour mes camarades rencontrant des difficult&eacute;s) jusqu&rsquo;aux bootcamps et missions clients que j&rsquo;anime aujourd&rsquo;hui, je partage mes exp&eacute;riences afin d&rsquo;aider les &eacute;quipes &agrave; monter plus rapidement en comp&eacute;tences et &agrave; gagner en autonomie.
+        </p>
+        <p style="color:var(--text);font-size:1rem;line-height:1.85;margin:0;">
+          Mon moteur est de concevoir des solutions fiables et durables, tout en ayant un impact concret et positif sur les projets et les personnes avec lesquelles je collabore.
+        </p>
+      </div>
     </div>
   </div>
 </section>
